@@ -1,13 +1,13 @@
 Package: gWidgetsRGtk2
-Version: 0.0-27
-Date: 2007-10-24
+Version: 0.0-28
+Date: 2007-11-05
 Title: Toolkit implementation of gWidgets for RGtk2
 Author: Michael Lawrence, John Verzani
 Maintainer: John Verzani <gwidgetsrgtk@gmail.com>
-Depends: methods, gWidgets(>= 0.0.23), RGtk2
+Depends: methods, gWidgets(>= 0.0.25), RGtk2
 Suggests: cairoDevice (>= 2.3.0)
 Description: Port of gWidgets API to RGtk2
 License: GPL (>= 2)
 URL: http://www.math.csi.cuny.edu/pmg
 LazyLoad: yes
-Packaged: Tue Nov  6 23:15:23 2007; verzani
+Packaged: Tue Jan 22 14:10:22 2008; verzani
